--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <!-- 
+     
         <activity android:name=".RRWelcome"
                   android:label="@string/app_name">
             <intent-filter>
@@ -12,34 +12,39 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity android:name=".RRTakeShot"
                   android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.RRTakeShot" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity>        
+        </activity>                
         <activity android:name=".RRCaptured"
                   android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.RRCaptured" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>         
         <activity android:name=".RRDayList"
                   android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.RRDayList" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        -->
+        <activity android:name=".RROneDayReceiptList"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.RROneDayReceiptList" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".RREditor"
                   android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.RREditor" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 </application>
