--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".RROneDayReceiptList"
+        <activity android:name=".RRReceiptList"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.RROneDayReceiptList" />
