--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,13 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <activity android:name=".RRTakeReceiptActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
      <!-- 
         <activity android:name=".RRWelcome"
                   android:label="@string/app_name">
@@ -47,7 +54,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        -->
+
         <activity android:name=".RRCarouselReceiptList"
                   android:label="@string/app_name">
             <intent-filter>
@@ -55,6 +62,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        -->        
 </application>
     <uses-sdk android:minSdkVersion="3" />
 </manifest> 
