ADDED: Money view is integrated into detail activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,17 +4,38 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <activity android:name=".RRTakeReceiptActivity"
+    <activity android:name=".RRHomeScreenActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RRCaptured"
+    <activity android:name=".RRTakeReceiptActivity"
                   android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.RRCaptured" />
+                <action android:name="android.intent.action.RRTakeReceiptActivity" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".RRCaptureConfirmActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.RRCaptureConfirmActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".RRReceiptListActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.RRReceiptListActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".RRReceiptDetailActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.RRReceiptDetailActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
