--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -87,4 +87,6 @@
         -->        
 </application>
     <uses-sdk android:minSdkVersion="1" />
+<uses-permission android:name="android.permission.CAMERA"></uses-permission>
+
 </manifest> 
